@@ -15,6 +15,8 @@ Version 4.1.3:
  * Fix: make sure exabgpcli does not hang when exabgp.api.ack is set to False
    patch by: basyron
  * CHANGE: large change to the configuration code (should not have any effect but the devil is in the details)
+ * CHANGE: using next-hop self could lead to route generated with a IPv6 next-hop in the IPv4 next-hop
+   This COULD have been accepted by peers. This version does prevent such generation.
 
 Version 4.1.2
  * Feature: exabgpcli autocomplete
